[package]
name = "subtrim"
description = "Trim subtitle files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["cargo", "derive"] }
subparse = "0.7.0"
